tests/error/invalid_while.gw
// [contains] in while condition
while(null);
